--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -45,7 +45,7 @@
                             <div class="fr-col-12">Capital social : {{bailleur.capital_social}}</div>
                         {% endif %}
                     </div>
-                    <hr class="fr-col-12 fr-my-3w">
+                    <hr class="fr-col-12 fr-mt-3w">
                     {% if upform.bailleur.field.choices|length > 1 or upform.errors %}
                         <div class="fr-col-12">
                             <div class="block--row-strech">
@@ -78,61 +78,105 @@
                 </div>
             </div>
         {% endwith %}
+
         <div class="fr-container">
-            <form method="post" action="">
-                {% csrf_token %}
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-12">
+                    <h4 class="fr-mb-0">Administration</h4>
+                </div>
+                <div class="fr-col-12 fr-text--lg fr-mb-0">
+                    <strong>
+                        {{ convention.administration }}
+                    </strong>
+                </div>
+            </div>
+            <div class="fr-col-12 fr-mt-1w">
+                <div class="block--row-strech">
+                    <div class="block--row-strech-1">
+                        <strong>Ce n'est pas la bonne administration ? </strong>
+                        <p>Vous pouvez changer l'administration de cette convention. <br/>
+                            cette opération est irréversible et vous fera perdre l'accès à cette convention.</p>
+                    </div>
+                    <details {% if upform.errors %}open{% endif %} class="fr-mt-3w">
+                        <summary>
+                            <div class="fr-btn">Changer l'administration</div>
+                        </summary>
+                        {% comment %}
+                            <div>
+                                <form method="post" action="">
+                                    {% csrf_token %}
+                                    {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
+                                        {% url 'users:search_bailleur' as search_bailleur_url %}
+                                        {% include "common/form/input_search_select.html" with form_input=upform.bailleur url=search_bailleur_url %}
+                                    {% endwith %}
+                                    <button class="fr-btn" name="change_bailleur" value="True">
+                                        Changer le bailleur
+                                    </button>
+                                </form>
+                            </div>
+                            {% endcomment %}
+                    </details>
+                </div>
+            </div>
+            <hr class="fr-col-12 fr-my-3w">
+        </div>
+    </div>
 
-                <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-12">
-                        <h4>Signataire de la convention{% if convention.programme.is_foyer or convention.programme.is_residence %} (Propriétaire){% endif %}</h4>
+    <div class="fr-container">
+        <form method="post" action="">
+            {% csrf_token %}
 
-                        {% include "common/form/input_text.html" with form_input=form.signataire_nom object_field="bailleur__signataire_nom__"|add:form.uuid.value %}
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-12">
+                    <h4>Signataire de la convention{% if convention.programme.is_foyer or convention.programme.is_residence %} (Propriétaire){% endif %}</h4>
 
-                        <div class="fr-mb-2w">
-                            <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.signataire_fonction object_field="bailleur__signataire_fonction__"|add:form.uuid.value %}
-                                </div>
-                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:form.uuid.value %}
-                                </div>
+                    {% include "common/form/input_text.html" with form_input=form.signataire_nom object_field="bailleur__signataire_nom__"|add:form.uuid.value %}
+
+                    <div class="fr-mb-2w">
+                        <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                {% include "common/form/input_text.html" with form_input=form.signataire_fonction object_field="bailleur__signataire_fonction__"|add:form.uuid.value %}
+                            </div>
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+                                {% include "common/form/input_date.html" with form_input=form.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:form.uuid.value %}
                             </div>
                         </div>
+                    </div>
 
-                        <div class="fr-mb-2w">
-                            {% include "common/form/input_text.html" with form_input=form.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:form.uuid.value %}
-                        </div>
+                    <div class="fr-mb-2w">
+                        {% include "common/form/input_text.html" with form_input=form.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:form.uuid.value %}
+                    </div>
 
-                        {% if convention.programme.is_foyer or convention.programme.is_residence %}
-                            <h4>Gestionnaire des logments conventionnés</h4>
-                            {% with convention_uuid=convention.uuid|slugify %}
+                    {% if convention.programme.is_foyer or convention.programme.is_residence %}
+                        <h4>Gestionnaire des logments conventionnés</h4>
+                        {% with convention_uuid=convention.uuid|slugify %}
 
-                                {% include "common/form/input_text.html" with form_input=form.gestionnaire object_field="convention__gestionnaire__"|add:convention_uuid %}
+                            {% include "common/form/input_text.html" with form_input=form.gestionnaire object_field="convention__gestionnaire__"|add:convention_uuid %}
 
-                                {% include "common/form/input_text.html" with form_input=form.gestionnaire_signataire_nom object_field="convention__gestionnaire_signataire_nom__"|add:convention_uuid %}
+                            {% include "common/form/input_text.html" with form_input=form.gestionnaire_signataire_nom object_field="convention__gestionnaire_signataire_nom__"|add:convention_uuid %}
 
-                                <div class="fr-mb-2w">
-                                    <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
-                                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                            {% include "common/form/input_text.html" with form_input=form.gestionnaire_signataire_fonction object_field="convention__gestionnaire_signataire_fonction__"|add:convention_uuid %}
-                                        </div>
-                                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                            {% include "common/form/input_date.html" with form_input=form.gestionnaire_signataire_date_deliberation object_field="convention__gestionnaire_signataire_date_deliberation__"|add:convention_uuid %}
-                                        </div>
+                            <div class="fr-mb-2w">
+                                <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
+                                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                        {% include "common/form/input_text.html" with form_input=form.gestionnaire_signataire_fonction object_field="convention__gestionnaire_signataire_fonction__"|add:convention_uuid %}
+                                    </div>
+                                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+                                        {% include "common/form/input_date.html" with form_input=form.gestionnaire_signataire_date_deliberation object_field="convention__gestionnaire_signataire_date_deliberation__"|add:convention_uuid %}
                                     </div>
                                 </div>
+                            </div>
 
-                                <div class="fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.gestionnaire_signataire_bloc_signature object_field="convention__gestionnaire_signataire_bloc_signature__"|add:convention_uuid %}
-                                </div>
+                            <div class="fr-mb-2w">
+                                {% include "common/form/input_text.html" with form_input=form.gestionnaire_signataire_bloc_signature object_field="convention__gestionnaire_signataire_bloc_signature__"|add:convention_uuid %}
+                            </div>
 
-                            {% endwith %}
-                        {% endif %}
-                    </div>
+                        {% endwith %}
+                    {% endif %}
                 </div>
-                {% include "common/required_fields_info.html" %}
-                {% include "conventions/common/form_footer_button.html" %}
-            </form>
-        </div>
+            </div>
+            {% include "common/required_fields_info.html" %}
+            {% include "conventions/common/form_footer_button.html" %}
+        </form>
+    </div>
     </div>
 {% endblock %}
