--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="fr-col-12 fr-mt-1w">
-                <div class="block--row-strech">
+                <div>
                     <div class="block--row-strech-1">
                         <strong>Ce n'est pas la bonne administration ? </strong>
                         <p>Vous pouvez changer l'administration de cette convention. <br/>
@@ -99,22 +99,24 @@
                     </div>
                     <details {% if upform.errors %}open{% endif %} class="fr-mt-3w">
                         <summary>
-                            <div class="fr-btn">Changer l'administration</div>
+                            <div class="fr-btn fr-mt-auto">Changer l'administration</div>
                         </summary>
-                        {% comment %}
-                            <div>
-                                <form method="post" action="">
-                                    {% csrf_token %}
-                                    {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
-                                        {% url 'users:search_bailleur' as search_bailleur_url %}
-                                        {% include "common/form/input_search_select.html" with form_input=upform.bailleur url=search_bailleur_url %}
+                        <div class="fr-mt-1w">
+                            <form method="post" action="">
+                                {% csrf_token %}
+                                {% with convention_uuid_str=convention.uuid|stringformat:"s" %}
+                                    {% with 'users:search_administration' as url %}
+                                        {% include "common/form/input_search_select.html" with form_input=form.administration %}
                                     {% endwith %}
-                                    <button class="fr-btn" name="change_bailleur" value="True">
-                                        Changer le bailleur
-                                    </button>
-                                </form>
-                            </div>
-                            {% endcomment %}
+                                {% endwith %}
+                                <button
+                                    name="change_administration"
+                                    value="True"
+                                    class="fr-btn fr-btn--icon-left fr-icon-warning-line" type="submit" form="{{ form_id }}">
+                                    Valider le changement d'administration
+                                </button>
+                            </form>
+                        </div>
                     </details>
                 </div>
             </div>
