--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -35,6 +35,7 @@
                     </div>
                     {% include "conventions/avenant_list.html" with conventions=avenants %}
                     {% include "conventions/denonciation_list.html" with conventions=denonciation %}
+                    {% include "conventions/resiliation_list.html" with conventions=resiliation%}
                 </div>
             {% else %}
                 <div class="fr-py-3w">
@@ -58,6 +59,9 @@
                                     <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>
                                     {% if convention.is_avenant and convention.is_denonciation %}
                                         La dénonciation de la convention est en cours
+                                    {% endif %}
+                                    {% if convention.is_avenant and convention.is_resiliation %}
+                                        La résiliation de la convention est en cours
                                     {% else %}
                                         Un avenant est déjà en cours.
                                     {% endif %}
@@ -175,6 +179,7 @@
                 <hr>
                 {% if convention|display_is_not_resiliated_or_denonciated %}
                     {% include "conventions/avenant/denonciation_start.html" %}
+                    {% include "conventions/avenant/resiliation_start.html" %}
                 {% endif %}
             </div>
         </div>
