--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -44,6 +44,13 @@
                 {% if convention.is_denonciation %}
                     {% include "conventions/recapitulatif/denonciation.html"  with target_url='conventions:denonciation' %}
                     {% include "conventions/recapitulatif/commentaires.html" with target_url='conventions:avenant_commentaires' %}
+                {% elif convention.is_resiliation %}
+                    {% if request.user.is_instructeur_departemental %}
+                        {% include "conventions/recapitulatif/resiliation.html"  with target_url='conventions:resiliation' %}
+                        {% include "conventions/recapitulatif/resiliation_acte.html"  with target_url='conventions:resiliation_acte' %}
+                    {% else %}
+                        {% include "conventions/recapitulatif/resiliation.html"  with target_url='conventions:resiliation_creation' %}
+                    {% endif %}
                 {% elif convention.is_avenant %}
                     {% if 'bailleur' in avenant_list %}
                         {% if convention_form_steps|is_a_step:'ConventionBailleurView' or convention_form_steps|is_a_step:'AvenantBailleurView' %}
@@ -123,17 +130,26 @@
                     {% if not convention|display_is_validated %}
                         <div class="fr-grid-row fr-grid-row--gutters fr-mt-3w">
                             <div class="fr-col-6 fr-py-5w fr-px-3w">{% include "conventions/actions/bailleur_notification.html" %}</div>
-                            <div class="fr-col-6 fr-py-5w fr-px-3w apilos-or-border">
-                                {% if convention.is_denonciation %}
-                                    {% include "conventions/actions/validate_denonciation.html" %}
-                                {% else %}
-                                    {% include "conventions/actions/instructeur_validation.html" %}
+                            {% if not convention.is_resiliation %}
+                                <div class="fr-col-6 fr-py-5w fr-px-3w apilos-or-border">
+                            {% endif %}
+                            {% if convention.is_resiliation and request.user.is_instructeur_departemental %}
+                                <div class="fr-col-6 fr-py-5w fr-px-3w apilos-or-border">
+                            {% endif %}
+                            {% if convention.is_denonciation %}
+                                {% include "conventions/actions/validate_denonciation.html" %}
+                            {% elif convention.is_resiliation %}
+                                {% if request.user.is_instructeur_departemental %}
+                                    {% include "conventions/actions/validate_resiliation.html" %}
                                 {% endif %}
-                            </div>
+                            {% else %}
+                                {% include "conventions/actions/instructeur_validation.html" %}
+                            {% endif %}
+                        </div>
                         </div>
                     {% endif %}
                     {% include "conventions/actions/type1and2_options.html" %}
-                    {% if not convention.is_denonciation %}
+                    {% if not convention.is_denonciation and not convention.is_resiliation %}
                         {% include "conventions/actions/generate_convention.html" %}
                     {% endif %}
                     {% include "conventions/actions/cancel_convention.html" %}
