--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -116,15 +116,15 @@
                             </div>
                         </div>
 
-                        {# Champs annee de validation #}
-                        {% if date_validation_choices %}
+                        {# Champs annee de signature #}
+                        {% if date_signature_choices %}
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
                                 <div class="">
-                                    <select class="fr-select" name="date_validation">
-                                        <option value="">Année de validation</option>
-                                        {% for value in date_validation_choices %}
+                                    <select class="fr-select" name="date_signature">
+                                        <option value="">Année de signature</option>
+                                        {% for value in date_signature_choices %}
                                             <option value="{{ value }}"
-                                                {% if value == request.GET.date_validation %}selected{% endif %}>
+                                                {% if value == request.GET.date_signature %}selected{% endif %}>
                                                 {{ value }}
                                             </option>
                                         {% endfor %}
