--- a/templates/conventions/recapitulatif/operation.html
+++ b/templates/conventions/recapitulatif/operation.html
@@ -31,7 +31,11 @@
                         {% endif %}
 
                         {% include "common/display_field_if_exists.html" with label="Nom" value=programme.nom object_field="programme__nom__"|add:programme_uuid %}
-                        {% include "common/display_field_if_exists.html" with label="Adresse" value=convention.adresse object_field="programme__adresse__"|add:programme_uuid %}
+                        {% if convention.adresse %}
+                            {% include "common/display_field_if_exists.html" with label="Adresse" value=convention.adresse object_field="convention__adresse__"|add:convention_uuid %}
+                        {% else %}
+                            {% include "common/display_field_if_exists.html" with label="Adresse" value=programme.adresse object_field="programme__adresse__"|add:programme_uuid %}
+                        {% endif %}
                         {% include "common/display_field_if_exists.html" with label="Code postal" value=programme.code_postal object_field="programme__code_postal__"|add:programme_uuid %}
                         {% include "common/display_field_if_exists.html" with label="Ville" value=programme.ville object_field="programme__ville__"|add:programme_uuid %}
                         {% include "common/display_checkbox.html" with label="ANRU" value=programme.anru object_field="programme__anru__"|add:programme_uuid %}
