--- a/templates/conventions/actions/upload_signed_document.html
+++ b/templates/conventions/actions/upload_signed_document.html
@@ -1,4 +1,5 @@
 {% load display_filters %}
+
 <div class="fr-col-12 fr-my-2w">
     {% if request|is_instructeur %}
         <div role="alert" class="fr-alert fr-alert--info fr-icon-arrow-right-s-line-double">
@@ -16,51 +17,15 @@
                     Ici, vous pouvez déposer votre {{convention|display_kind}} signé{{convention|display_gender_terminaison}} afin qu'{{convention|display_personnal_pronom}} puisse être transmis{{convention|display_gender_terminaison}}.
                 {% endif %}
             </p>
+
             <div class="block--row-strech">
+                {% include "conventions/common/form_upload_signed_document.html" %}
 
-                <form method="post" action="" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
-                    {% csrf_token %}
-                    <input
-                        class="fileinput--hidden"
-                        type="file"
-                        id="{{upform.file.id_for_label}}"
-                        name="{{upform.file.html_name}}"
-                        accept="application/pdf">
-                    <div class="block--row-strech">
-                        <div>
-                            <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
-                                {% if convention.is_denonciation %}
-                                    Déposer l'acte de dénonciation publié
-                                {% else %}
-                                    Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
-                                {% endif %}
-                            </button>
-                            {% for error in upform.file.errors %}
-                                <p id="text-input-error-desc-error" class="fr-error-text">
-                                    {{ error }}
-                                </p>
-                            {% endfor %}
-                        </div>
-                    </div>
-
-                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                        document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
-                            document.getElementById('{{upform.file.id_for_label}}').click();
-                        };
-                        document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
-                            var input = document.createElement('input');
-                            input.setAttribute('type', 'hidden');//hidden input
-                            input.setAttribute('name', 'Upload');//set the param name
-                            input.setAttribute('value', 'True');//set the value
-                            this.form.appendChild(input)
-                            document.getElementById("{{upform.file.id_for_label}}_form").submit();
-                        }
-                    </script>
-                </form>
                 <a class="fr-my-1w fr-link fr-ml-2w" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
                     Consulter le récapitulatif
                 </a>
             </div>
+
         </div>
     {% else %}
         <div role="alert" class="fr-alert fr-alert--success">
